<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Vertretungsplan</string>
  <string name="einstellungen">Einstellungen</string>
  <string name="einst_klasse">Klasse / Lehrer</string>
  <string name="passwort">Passwort</string>
  <string name="name">Benutzername</string>
  <string name="about">Über&#8230;</string>
  <string name="licenses">Lizenzen</string>
  <string name="license">License for Jsoup only: \n
        \n
The jsoup code-base (include source and compiled packages) are distributed under the open source MIT license as described below. \n
\n
The MIT License Copyright © 2009 - 2013 Jonathan Hedley (jonathan@hedley.net)\n
\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n
\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n
\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n
\n
    </string>
  <string name="abouttext">Eine Android-App, welche den Vertretungsplan des FSG in Großröhrsdorf abruft und formatiert. \n
\n
Website des FSG: http://ferdinand-sauerbruch-gymnasium.de \n</string>
  <string name="textview">TextView</string>
  <string name="heute">Heute</string>
  <string name="morgen">Morgen</string>
  <string name="Kategorie_Main">Anmeldung</string>
  <string name="Kategorie_Notification">Benachrichtigungen</string>
  <string name="datenschutz">Datenschutz</string>
  <string name="datenschutzInhalt">Wir setzen Google Analytics, einen Webanalysedienst der Google Inc. („Google“) ein. Google verwendet Cookies. Die durch das Cookie erzeugten Informationen über die Benutzung des Onlineangebotes durch die Nutzer werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert. \n
Google wird diese Informationen in unserem Auftrag benutzen, um die Nutzung unseres Onlineangebotes durch die Nutzer auszuwerten, um Reports über die Aktivitäten innerhalb dieses Onlineangebotes zusammenzustellen und um weitere mit der Nutzung dieses Onlineangebotes und der Internetnutzung verbundene Dienstleistungen uns gegenüber zu erbringen. Dabei können aus den verarbeiteten Daten pseudonyme Nutzungsprofile der Nutzer erstellt werden.\n
\n
Wir setzen Google Analytics nur mit aktivierter IP-Anonymisierung ein. Das bedeutet, die IP-Adresse der Nutzer wird von Google innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum gekürzt. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort gekürzt. Die von dem Browser des Nutzers übermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengeführt.\n
\n
Die Nutzer können die Speicherung der Cookies durch eine entsprechende Einstellung ihrer Browser-Software verhindern; die Nutzer können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf ihre Nutzung des Onlineangebotes bezogenen Daten an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verfügbare Browser-Plugin herunterladen und installieren: http://tools.google.com/dlpage/gaoptout?hl=de.\n
\n
Weitere Informationen zur Datennutzung zu Werbezwecken durch Google, Einstellungs- und Widerspruchsmöglichkeiten erfahren Sie auf den Webseiten von Google: https://www.google.com/intl/de/policies/privacy/partners/ („Datennutzung durch Google bei Ihrer Nutzung von Websites oder Apps unserer Partner“), http://www.google.com/policies/technologies/ads („Datennutzung zu Werbezwecken“), http://www.google.de/settings/ads („Informationen verwalten, die Google verwendet, um Ihnen Werbung einzublenden“) und http://www.google.com/ads/preferences/ („Bestimmen Sie, welche Werbung Google Ihnen zeigt“).\n</string>
  <string name="BenachrichtigungAusSummary">Sie werden keine Benachrichtigungen erhalten</string>
  <string name="BenachrichtigungAnSummary">Sie werden etwa stündlich von Änderungen des morgigen Vertretungsplanes benachrichtigt, wenn für Sie etwas Wichtiges drinsteht.</string>
  <string name="AnalyticsAusSummary">Schade! Es werden keine Crash-Reports und Nutzungsinformationen an den Entwickler gesendet.</string>
  <string name="AnalyticsAnSummary">Crashes und Nutzungsinformationen werden an den Entwickler gesendet. Dankeschön!</string>


</resources>