<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:title="@string/Kategorie_Main">
    <EditTextPreference
      android:key="KL"
      android:persistent="true"
      android:singleLine="true"
      android:summary="Für Lehrer reicht der Nachname."
      android:title="@string/einst_klasse"/>
    <EditTextPreference
      android:inputType="textNoSuggestions"
      android:key="BN"
      android:persistent="true"
      android:singleLine="true"
      android:title="@string/name"/>
    <EditTextPreference
      android:inputType="textPassword"
      android:key="PW"
      android:persistent="true"
      android:title="@string/passwort"/>
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/Kategorie_Notification">
    <SwitchPreference
      android:key="Benachrichtigungan"
      android:persistent="true"
      android:summaryOff="@string/BenachrichtigungAusSummary"
      android:summaryOn="@string/BenachrichtigungAnSummary"
      android:title="@string/Kategorie_Notification">
    </SwitchPreference>

  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/datenschutz">
    <SwitchPreference
      android:defaultValue="false"
      android:key="Datenschutz"
      android:persistent="true"
      android:summaryOff="@string/AnalyticsAusSummary"
      android:summaryOn="@string/AnalyticsAnSummary"
      android:title="Anonyme Datensammlung aktivieren">
    </SwitchPreference>

    <PreferenceScreen
      android:title="Datenschutzerklärung">
      <intent
        android:action="android.intent.action.VIEW"
        android:targetClass="com.KayKaprolat.Praktikum.Vertretungsplan2.DatenschutzActivity"
        android:targetPackage="com.KayKaprolat.Praktikum.Vertretungsplan2"/>
    </PreferenceScreen>


  </PreferenceCategory>

</PreferenceScreen>